fix bootstrap layout and admin panel UI